--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,6 @@ html {
   font-size: 62.5%;
 }
 
-/* * {
-  box-sizing: border-box;
-  color: var(--clr-black);
-  font-size: 62.5%;
-} */
-
 *,
 *::before,
 *::after {
@@ -43,6 +37,7 @@ html {
 body {
   font-size: 16px;
   font-family: "Rubik", sans-serif;
+  background-color: var(--clr-gray);
 }
 
 ul {
@@ -53,6 +48,11 @@ button {
   background-color: transparent;
   border: 0;
   border-radius: 0;
+}
+
+.container {
+  max-width: 100rem;
+  margin: 0 auto;
 }
 
 /* CSS */
@@ -146,4 +146,149 @@ button {
 .fairy {
   background-color: var(--type-fairy);
   color: var(--clr-black);
+}
+
+header {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, 0.5);
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+  padding: 0 1rem;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.btn-header {
+  /* background-color: var(--clr-gray); */
+  padding: 1rem;
+  border-radius: 100vmax;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 600;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
+  transition: transform 0.2s;
+}
+
+.btn-header:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
+}
+
+main {
+  padding: 2rem;
+}
+
+.pokemon-cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+@media (min-width: 480px) {
+  .pokemon-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 768px) {
+  .pokemon-cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.pokemon {
+  border-radius: 2rem;
+  background-color: var(--clr-white);
+  box-shadow: 0 0 3rem -1rem rgba(0, 0, 0, 0.25);
+  padding: 2.5rem 0;
+  text-transform: uppercase;
+  position: relative;
+  isolation: isolate;
+  overflow: hidden;
+}
+
+.pokemon-id-back {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 8rem;
+  font-weight: 800;
+  color: var(--clr-gray);
+  z-index: -1;
+}
+
+.pokemon-img {
+  padding: 0 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.pokemon-img img {
+  width: 100%;
+  max-width: 15rem;
+}
+
+.pokemon-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0 1.5rem;
+  text-align: center;
+}
+
+.container-name {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  justify-content: center;
+}
+
+.pokemon-id {
+  background-color: var(--clr-gray);
+  padding: 0.5rem;
+  border-radius: 100vmax;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.pokemon-name {
+  font-size: 2.5rem;
+}
+
+.pokemon-types {
+  display: flex;
+  gap: 1rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.type {
+  padding: 1rem 1.5rem;
+  border-radius: 100vmax;
+}
+
+.pokemon-stats {
+  font-size: 1.5rem;
+  display: flex;
+  gap: 1.25rem;
+}
+
+.stat {
+  background-color: var(--clr-gray);
+  padding: 1rem 1.5rem;
+  border-radius: 100vmax;
 }
